the creation of items and recipes in start_servicce has been changed
